<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView_saludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

    <TextView
        android:id="@+id/textView_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

    <CheckBox
        android:id="@+id/checkbox_Despedida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/despedida"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/vista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eligeDespedida"/>


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_Adios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/adios"/>
            <RadioButton
                android:id="@+id/radioButton_HastaLuego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hastaluego"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/boton_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"/>

</LinearLayout>